; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_syscalls.c_nspace_flags_matches_handler.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_syscalls.c_nspace_flags_matches_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NSPACE_ITEM_ALL_EVENT_TYPES = common dso_local global i32 0, align 4
@NSPACE_ITEM_NSPACE_EVENT = common dso_local global i32 0, align 4
@NSPACE_ITEM_SNAPSHOT_EVENT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [47 x i8] c"nspace_flags_matches_handler: invalid type %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @nspace_flags_matches_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nspace_flags_matches_handler(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %21 [
    i32 129, label %7
    i32 128, label %14
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @NSPACE_ITEM_ALL_EVENT_TYPES, align 4
  %10 = and i32 %8, %9
  %11 = load i32, i32* @NSPACE_ITEM_NSPACE_EVENT, align 4
  %12 = icmp eq i32 %10, %11
  %13 = zext i1 %12 to i32
  store i32 %13, i32* %3, align 4
  br label %24

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @NSPACE_ITEM_ALL_EVENT_TYPES, align 4
  %17 = and i32 %15, %16
  %18 = load i32, i32* @NSPACE_ITEM_SNAPSHOT_EVENT, align 4
  %19 = icmp eq i32 %17, %18
  %20 = zext i1 %19 to i32
  store i32 %20, i32* %3, align 4
  br label %24

21:                                               ; preds = %2
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i32 %22)
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %21, %14, %7
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
